--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
+**/.settings/
+**/bin/
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+db.properties
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse-Settings
+org.eclipse.jdt.core.prefs
+
+# Temporäre Dateien
+~*
+*bak*
+thumbs.db
+Thumbs.db
+.DS_Store
